--- a/app/views/hungryform/_form.html.erb
+++ b/app/views/hungryform/_form.html.erb
@@ -6,5 +6,5 @@
   <%= render partial: "#{views_prefix}/#{el.class.name.demodulize.underscore}", locals: { field: el, views_prefix: views_prefix } %>
 <% end %>
 
-<%= hungry_link_to_prev_page(form, "Prev") %>
-<%= hungry_link_to_next_page(form, "Next") %>
+<%= hungry_link_to_prev_page(form, "Prev", method: :post) %>
+<%= hungry_link_to_next_page(form, "Next", method: :post) %>
