--- a/app/views/hungryform/_select_field.html.erb
+++ b/app/views/hungryform/_select_field.html.erb
@@ -1,7 +1,9 @@
-<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => (field.dependency if field.dependency) do -%>
+<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => (field.dependency if field.dependency) do
 
-  <%= label_tag field.name, field.label << ("*" if field.required?).to_s %>
-  <%= select_tag field.name, options_for_select(field.options.invert, field.value), field.attributes.except(:class) %>
-  <% if field.error -%><span class="error"><%= field.error %></span><% end -%>
+  concat label_tag field.name, field.label << ("*" if field.required?).to_s
+  concat select_tag field.name, options_for_select(field.options.invert, field.value), field.attributes.except(:class)
+  unless field.error.empty?
+    concat content_tag :span, field.error, class: 'error' 
+  end
 
-<% end -%>
+end %>
