--- a/app/views/hungryform/_text_area.html.erb
+++ b/app/views/hungryform/_text_area.html.erb
@@ -1,7 +1,9 @@
-<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => (field.dependency if field.dependency) do -%>
-
-  <%= label_tag field.name, field.label << ("*" if field.required?).to_s %>
-  <%= text_area_tag field.name, field.value, field.attributes.except(:class) %>
-  <% if field.error -%><span class="error"><%= field.error %></span><% end -%>
-  
-<% end -%>
+<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => (field.dependency if field.dependency) do
+    
+  concat label_tag field.name, field.label << ("*" if field.required?).to_s
+  concat text_area_tag field.name, field.value, field.attributes.except(:class)
+  unless field.error.empty?
+    concat content_tag :span, field.error, class: 'error' 
+  end
+    
+end %>
