Fixed base group validation

--- a/app/views/hungryform/_form.html.erb
+++ b/app/views/hungryform/_form.html.erb
@@ -6,5 +6,6 @@
   <%= render partial: "#{views_prefix}/#{el.class.name.demodulize.underscore}", locals: { field: el, views_prefix: views_prefix } %>
 <% end %>
 
-<%= hungry_link_to_prev_page(form, "Prev", method: :post) %>
-<%= hungry_link_to_next_page(form, "Next", method: :post) %>
+<%= hungry_link_to_prev_page(form, "Prev", method: :post) if form.prev_page %>
+<%= hungry_link_to_next_page(form, "Next", method: :post) if form.next_page %>
+<%= hungry_link_to_submit(form, "Submit") if form.current_page == form.pages.last %>
