--- a/app/views/hungryform/_html.html.erb
+++ b/app/views/hungryform/_html.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => (field.dependency if field.dependency) do -%>
+<%= content_tag :div, id: "#{field.name}_wrapper", class: field.html_class, 'data-dependency' => field.dependency_json do -%>
 
   <%= field.value.html_safe %>
   
